@@ -655,6 +655,14 @@ Opencv_Init(Tcl_Interp *interp)
         (Tcl_ObjCmdProc *) mat_countNonZero,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
 
+    Tcl_CreateObjCommand(interp, "::" NS "::eigen",
+        (Tcl_ObjCmdProc *) mat_eigen,
+        (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
+
+    Tcl_CreateObjCommand(interp, "::" NS "::eigenNonSymmetric",
+        (Tcl_ObjCmdProc *) mat_eigenNonSymmetric,
+        (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
+
     Tcl_CreateObjCommand(interp, "::" NS "::exp",
         (Tcl_ObjCmdProc *) mat_exp,
         (ClientData)cvd, (Tcl_CmdDeleteProc *)NULL);
